# govee-sync

./: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
etc/: uwsgi.ini
src/govee_sync/modules/: govee.py
