[project]
name = "govee-sync"
version = "0.1.0"
description = "Syncs all connected Govee Thermometers and saves to DB for visuals and analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleak>=1.1.1",
    "django==5.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]

[tool.ruff]
line-length = 120
indent-width = 4


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []